--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ p {
     margin-left: 25px;
 }
 
-/* Content */
+/* Main Content */
 .content {
     width: 75%;
     display: inline-block;
@@ -131,7 +131,9 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
+/* Main content end */
 
+/* Side bar Benefits content */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -148,27 +150,7 @@ p {
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
 .benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -179,10 +161,30 @@ p {
     max-width: 150px;
 }
 
+.benefit-brand {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+.benefit-brand h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
 .benefit-brand img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+}
+
+.benefit-cost {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+.benefit-cost h3 {
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 .benefit-cost img {
@@ -190,11 +192,6 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
-
-
-
-
 
 .footer {
     padding: 30px;
