--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,7 +192,9 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+/* end sidebar Benefits content */
 
+/* Footer */
 .footer {
     padding: 30px;
     clear: both;
